fixed private mind logo not displaying properly on iphones and safari

--- a/docs/src/pages/styles.module.css
+++ b/docs/src/pages/styles.module.css
@@ -1,5 +1,5 @@
 .container {
-  width: 70%;
+  width: 60%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
